# libripgrep

./: .gitignore  .prettierrc.json  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  plan.md  tsconfig.json
.github/workflows/: ci.yml
bench/: grep-tree.js
native/: Cargo.toml
native/src/: glob.rs  lib.rs  search.rs  walk.rs
scripts/: build-native.sh
src/: api.ts  binding.ts  darwin-arm64.ts  darwin-x64.ts  index.ts  linux-arm64.ts  linux-x64.ts  types.ts
test/: compile-grep.test.ts  entry-points.test.ts  glob.test.ts  grep-buffer.test.ts  grep-tree.test.ts  rg-differential.test.ts  smoke.test.ts  walk-tree.test.ts
