[package]
name = "libripgrep-native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "libripgrep"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
