[package]
name = "libripgrep-native"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "libripgrep"
crate-type = ["cdylib"]

[dependencies]
grep-matcher = "0.1"
grep-regex = "0.1"
memchr = "2"
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"
regex-automata = "0.4"
regex-syntax = "0.8"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
globset = "0.4.19"

[profile.release]
lto = true
strip = "symbols"
